--- a/Hotel_Booking_Analysis_Solution_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Solution_Capstone_Project.ipynb
@@ -1383,6 +1383,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ANALYSIS # 8 : Comparison of Duration of Stay in both types of Hotel**        \n",
+        "**Result By Analysis :** This Analysis provide the comparison by which company get to know that in which type of hotel, people like to stay more.    "
+      ],
+      "metadata": {
+        "id": "vHk5b7lALY_S"
+      }
     }
   ]
 }
